# firebase_push

./: .env-sample  .gitignore  Dockerfile  LICENSE  Pipfile  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: build-package.yml  code-style.yml
demo/: asgi.py  celery.py  urls.py  wsgi.py
demo/settings/: base.py  docker.py  native.py
demo_app/migrations/: 0001_initial.py
demo_app/models/: __init__.py  fcm.py  fcm_history.py
firebase_push/: __init__.py  admin.py  apps.py  defaults.py  message.py  tasks.py  utils.py
firebase_push/conf/: settings.py  urls.py
firebase_push/management/commands/: age_devices.py  cleanup_devices.py  cleanup_history.py
firebase_push/message/: __init__.py  base.py  localized_message.py  message.py
firebase_push/migrations/: 0001_initial.py  0002_default_topic.py
firebase_push/models/: __init__.py  devices.py  history.py  topics.py
firebase_push/serializers/: __init__.py  devices.py  topics.py
firebase_push/templates/firebase_push/: send_push.html
firebase_push/views/: __init__.py  device.py
scripts/: auto_restart.py
